--- a/css/index_mobile.css
+++ b/css/index_mobile.css
@@ -57,7 +57,7 @@ article {
   color: rgb(231, 223, 191);
   text-align: center;
   font-size: 200%;
-  line-height: 170px;
+  line-height: 180px;
 }
 
 .vline {
